Improve README layout with left-aligned text for better readability

--- a/README.html
+++ b/README.html
@@ -123,11 +123,15 @@
             border: 1px solid #ddd;
             margin: 20px auto;
             max-width: 80%;
+            text-align: left;
         }
 
         .toc ul {
             list-style-type: none;
             padding-left: 20px;
+            text-align: left;
+            display: block;
+            width: 100%;
         }
 
         .toc li {
